# 2-S3

./: CMakeLists.txt  README.md  SDK_README.md  partitions.csv
components/indication/: CMakeLists.txt
components/indication/include/indication/: indication.hpp  indication_defs.hpp
components/indication/src/indication/: indication.cpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  system_core.cpp  system_gpio.cpp  system_nvs.cpp  system_run.cpp  system_timer.cpp
main/include/: system.hpp  system_defs.hpp
